test/corpus/L1/positive/assignment.st
"---
id: assignment
kind: positive
phase: parse
layer: L1
spec: anexoA:sequence.assignment
origin: spec-ANSI
section: sequence.assignment
note: simple variable assignment
---"
x := 3
