test/corpus/L1/negative/radix-base-invalid.st
"---
id: radix-base-invalid
kind: negative
phase: lex
layer: L1
spec: anexoA:error.radix-base
origin: spec-ANSI
section: error.radix-base
codes: E_RADIX_BASE
---"
1r0
